@@ -1,4 +1,4 @@
-VERSION=1.18
+VERSION=1.19
 PYTHON=python
 
 test:
