@@ -1,7 +1,8 @@
-2013/12/05 (version 1.18)
+2013/12/05 (version 1.19)
 
 - Fixed a crash when there's no database.
 - Special tag "pin" replaced with "next".
+- Can now finish and restart tasks using the search window popup menu.
 
 
 2013/11/27 (version 1.17)
